[package]
name = "aes"
version = "0.1.0"
authors = ["Yuze Fu <i@xfox.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
clap = "3.0.0-beta.2"
generic-array = "0.14.4"
hex = "0.4.2"
nalgebra = "0.24.0"
rand = "0.8.0"
typenum = "1.12.0"
