[package]
name = "aes"
version = "0.1.0"
authors = ["Yuze Fu <i@xfox.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
clap = { version = "3.0.0-beta.2", features = ["cargo", "derive"] }
hex = "0.4.2"
nalgebra = "0.32.3"
rand = "0.8.0"
